--- a/DjangoExample/FirstBlog/blog/templates/index.html
+++ b/DjangoExample/FirstBlog/blog/templates/index.html
@@ -13,9 +13,15 @@
  
 <div class="container">
     <h1>First Blog</h1>
-    <h2>{{ title }}</h2>
-    <h3>Posted on {{ date }} by {{ author }}</h3>
-    <p>{{ body }}</p>
+    <hr />
+    {% for post in posts %}
+    	<div class="post">
+    		<h2>{{ post.title }}</h2>
+    		<h3>Posted on {{ post.timestamp }} by {{ post.author }}</h3>
+    		<p>{{ post.bodytext }}</p>
+    	</div>
+    	<hr />
+    {% endfor %}
  
 </div>
  
